--- a/minor/google_feed_reader/stylesheets/style.css
+++ b/minor/google_feed_reader/stylesheets/style.css
@@ -6,15 +6,14 @@
 }
 
 body{
-	background:#fff;
+	background: url(../images/eee_fade500.gif) repeat-x #fff;
 }
 
 h1{
-	background:	#333;
+	background:	url(../images/dark_gradient.gif) repeat-x;
 	font-size:3em;
 	color:#fff;
 	padding:5px;
-	border-bottom:1px solid #000;
 }
 
 #feed_adder{
@@ -27,7 +26,8 @@ h1{
 	width:650px;
 	border:0px;
 	padding:5px;
-	background:#e4f0fd;
+	background:url(../images/sidebar.gif) repeat-x;
+	border:1px solid #52912f;
 	
 }
 
@@ -38,7 +38,7 @@ h1{
 
 
 h3{
-	background:	#6e91b4;
+	background:	url(../images/green_shine40.gif) repeat-x 0px -5px;
 	border-bottom:1px solid #fff;
 	color:#fff;
 	padding:.25em;
@@ -51,16 +51,18 @@ h3 a{
 }
 
 #feeds{
-	width:90%;
 	margin-left: 5%;
 	margin-right: 5%;
+	padding:5px;
+	_height:1%;
+	overflow:auto;
 }
 
 .feed{
 	width:30%;
 	margin:10px;
 	float:left;	
-	background:#e4f0fd;
+	background: url(../images/sidebar.gif) repeat-x -100px;
 	display:none;
 }
 
@@ -77,7 +79,7 @@ h3 a{
 }
 
 .feed li a{
-	color:#e35124;
+	color:#52912f;
 	text-decoration:none;
 	font-size:1.1em;
 }
