git-svn-id: file:///Users/will/rendale@15 651630e0-a32e-0410-a001-f4242d931729

--- a/minor/google_feed_reader/stylesheets/style.css
+++ b/minor/google_feed_reader/stylesheets/style.css
@@ -63,7 +63,7 @@ h3 a{
 	margin:10px;
 	float:left;	
 	background: url(../images/sidebar.gif) repeat-x -100px;
-	display:none;
+	xdisplay:none;
 }
 
 .feed ol{
