--- a/Rails/notable/Trunk/app/views/notes/_note_listing.rhtml
+++ b/Rails/notable/Trunk/app/views/notes/_note_listing.rhtml
@@ -1,67 +1,51 @@
-<div class="note_listing" id="note<%=note_listing.id%>" <%=@new_style%>>	
-<div class="shadow" id="shadow<%=note_listing.id%>">
-	<div class="inner_note" id="inner_note<%=note_listing.id%>">
-		
-
-		<div id="note_controls">	
+<div class="note" id="note<%=note_listing.id%>" <%=@new_style%>>	
+		<div class="note_header">	
+			<div class="note_date">
+				<%= note_listing.date.strftime("%A %B %d, %Y").downcase %>
+			</div>
+			<div class="note_delete">
 	    	<%= link_to_remote '<img src="/images/buttonDelete.gif" border="0" />', 
 					:url=>{ :action => 'destroy', :id => note_listing } %>		
+			</div>
+			<div style="clear:both"></div>
 		</div>
-		
-				<% begin %>
-					<div class="small">
-					<!--<img src="/images/icons/date.png">-->
-					<%= note_listing.date.strftime("%A %B %d, %Y") %>
-					</div>
-				<% rescue 
-				end
-				%>
-		
-		<div id="notedescr<%= note_listing.id %>" style="width:445px;"><%= RedCloth.new(note_listing.description).to_html %></div>
-			<%= in_place_editor 'notedescr' + note_listing.id.to_s, 			    	
+	<div class="inner_note" id="inner_note<%=note_listing.id%>">			
+	<div id="notedescr<%= note_listing.id %>" class="note_text">
+		<%= RedCloth.new(note_listing.description).to_html %>
+	</div>
+
+	<%= in_place_editor 'notedescr' + note_listing.id.to_s, 			    	
 						:url=>{:controller=>'notes',:action=>'update_descr', :id=>note_listing},
 						:rows => 10, 
 						:cols => 60,
 						:load_text_url =>{:controller=>'notes',:action=>'get_descr', :id=>note_listing}
-						%>
-	<div style="clear:both"></div>
+						%>	
+
 	<div id="files<%=note_listing.id%>" class="file_block">
-		<% if not note_listing.note_files.blank? %>
-			<%= render(:partial => "file_listing", :collection => note_listing.note_files)%>
-    <% end %>
+			<% if not note_listing.note_files.blank? %>
+				<%= render(:partial => "file_listing", :collection => note_listing.note_files)%>
+		    <% end %>
+		<div style="clear:both"></div>
 	</div>
-	<div style="clear:both"></div>
 	
-	<br />	
 	<div class="tags">
-	<strong>Tags: </strong> 
-	
-	<%= 
-	if note_listing.tags.blank? 
-	"<span id=\"tags#{note_listing.id}\">add tags to this note</span>" 
-	else 
-	"<span id=\"tags#{note_listing.id}\">" + note_listing.tags.collect{|tag| tag.name}.join(", ") + "</span>"
-	end 
-	%>
-	
+	<h3>Tags:</h3> 
+		<%= 
+		if note_listing.tags.blank? 
+			"<span id=\"tags#{note_listing.id}\">add tags to this note</span>" 
+		else 
+			"<span id=\"tags#{note_listing.id}\">" + note_listing.tags.collect{|tag| tag.name}.join(", ") + "</span>"
+		end 
+		%>	
     </div>
 	<%= in_place_editor 'tags' + note_listing.id.to_s, 			    	
 						:url=>{:controller=>'notes',:action=>'tag', :id=>note_listing}, :cols=>37, :script=>true
 			            %>
-	<br />
-	<div>
-	<img src="/images/icons/printer.png">
-	<img src="/images/icons/email.png">
-	</div>
-	<br />
 	<%= link_to_function "add a file", "showhide($('addfile#{note_listing.id}'), this)"%>
 	<div id="addfile<%=note_listing.id%>" style="display:none">
-		
-		<%=
-		render :partial => 'file_upload_control', :object => note_listing
-		%>
-		
-	</div>
+	<%=
+	render :partial => 'file_upload_control', :object => note_listing
+	%>
 	</div>
 	</div>
 </div>
