--- a/Rails/notable/Trunk/app/views/layouts/notes.rhtml
+++ b/Rails/notable/Trunk/app/views/layouts/notes.rhtml
@@ -2,38 +2,42 @@
 <head>
   <title>Notable</title>
   <%= javascript_include_tag :defaults %> 
-  <%= javascript_include_tag 'notable.js'%>
+  <%= javascript_include_tag "jquery", "notable" %>
   <%= stylesheet_link_tag 'notable' %>
 </head>
 <body>
 
 <div class="header">
 	<h1 class="logo">
-		<div style="padding-left:25px;">Notable!</div>
-	</h1>				
-</div>
-<div class="navigation">
-<ul>
+		<div>Notable!</div>
+
+<ul class="navigation">
+<!--
 	  <li><%= link_to 'home', {:controller => 'notes', :action=>'home'}, :class=>'active' %></li>
 	  <li><%= link_to 'files', {:controller => 'notes', :action=> 'files'}, :class=>'inactive'  %></li>
 	  <li><%= link_to 'account', {:controller=> 'account', :action=>'account'}, :class=>'inactive' %></li>
+-->
 	  <li><%= link_to 'logout', {:controller=> 'account', :action=>'logout'}, :class=>'link' %></li>
   </ul>		
+	</h1>
 </div>
 
 <iframe id="upload_target" name="upload_target" style="width:0;height:0" frameborder="0"></iframe>
-
-<div id="content_wrapper">
-	<div class="top-bar">
+	<div class="search">
 		<div class="search_form">
 		<%= start_form_tag ({:action => 'search_by_tag'} )%>
 			<%= text_field_tag 'tag_search', "search for tags..." %> <%= submit_tag "Search", :class=>"button"%>
-			<%= link_to_remote 'new note', 
+			<%= link_to_remote 'Add a Note', 
 			:url=>{:controller=>'notes',:action=>'new'}		                       		     
 			%>
 		<%= end_form_tag %>
 		</div>
+		<div class="cloud" id="cloud">
+			<%=generate_tag_cloud()%>
+		</div>
 	</div>
+
+<div id="container">
 <%= @content_for_layout %>
 </div>
 </body>
