--- a/Rails/notable/Trunk/public/stylesheets/notable.css
+++ b/Rails/notable/Trunk/public/stylesheets/notable.css
@@ -1,229 +1,179 @@
-body { background-color: #ccc; color: #333; margin: 0px 0px 0px 0px; text-align: center;}
-
-body, p, ol, ul, td {
-  font-family: 'trebuchet ms';
-  font-size:   13px;
-  line-height: 18px;
+/****************************
+DEFAULTS
+*****************************/
+*{
+font-family: helvetica, sans-serif;
+font-size: 12px;
+margin:0px;
+padding:0px;
 }
 
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
+a{
+text-decoration:none;
+color:#000;
+padding:2px;
 }
 
-a { text-decoration:none; }
-a { color: #990000; }
-a:visited { color: #550000; }
-a:hover { color: #CC0000; }
-
-.fieldWithErrors {
-  padding: 2px;
-  background-color: red;
-  display: table;
+a:hover{
+color:#fff;
+background:#000;
+paddin:2px;
 }
 
-#ErrorExplanation {
-  width: 400px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 12px;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
+
+/****************************
+STRUCTURE
+*****************************/
+
+body{
+background:#eee;
+
 }
 
-#ErrorExplanation h2 {
-  text-align: left;
-  font-weight: bold;
-  padding: 5px 5px 5px 15px;
-  font-size: 12px;
-  margin: -7px;
-  background-color: #c00;
-  color: #fff;
+div#container
+{
+margin-left: 10%; 
+margin-right: 10%;
+text-align:left;
 }
 
-#ErrorExplanation p {
-  color: #333;
-  margin-bottom: 0;
-  padding: 5px;
+/****************************
+NAVIGATION
+*****************************/
+ul.navigation{
+list-style:none;
+text-align:right;
+margin-right:0px;
 }
 
-#ErrorExplanation ul li {
-  font-size: 12px;
-  list-style: square;
+
+ul.navigation li{
+display:inline;
 }
 
-/*########################################################*/
-div#content_wrapper{
-  margin: 0 auto;
-  width: 800px;
-  text-align: left;
-}
-
-div.header{
-	height: 90px;
-	background:#990000;
-	text-align: left;
-}
-
-div.account_links a{
-	color:#fff;
-	font-size:11px;
-}
-
-h1.logo{
-	color:#fff;
-	font-size:32px;
-	padding:0px;
-	margin:0px;
-}
-
-div.navigation{
-	background:#990000;
-	height:30px;
+ul.navigation a{
+color:#fff;
+text-decoration:none;
+position:relative;
 	}
 
-div.navigation ul {
-padding:0px;
-margin:0px;
+/****************************
+HEADER
+*****************************/
+div.header{
+text-align:left;
 }
 
-div.navigation li {
-	display: inline;
-	list-style: none;	
+h1{
+background:#000;
+padding:10px;
+color:#eee;
 }
 
-div.navigation li a.active{
-	width: 8em;
-	float: left;
-	padding: 6px 0;
-	margin: 0 4px 0 0;
-	text-align: center;
-	text-decoration: none;
-	color: #333;
-	background:#fff url(/images/gray_fad.jpg) bottom repeat-x;
+h1 div{
+font-size:2em;
 }
 
-div.navigation li a.inactive{
-	width: 8em;
-	display: block;
-	float: left;
-	padding: 6px 0;
-	margin: 0 4px 0 0;
-	text-align: center;
-	text-decoration: none;
-	color: #fff;
-	background:#660000;
+/****************************
+CONTROLS
+*****************************/
+
+div.search{
+margin: 10px 0 10px 0;
 }
 
-div.navigation li a.inactive:hover{
-	background:#CC0000;
+.cloud{
+margin:10px;
+font-size:10px;
 }
 
-div.navigation li a.link{
-	background:#CC0000;
-	color:#fff;
+.search_form input, .search_form a{
+font-size:2em;
+text-decoration:none;
+}
+
+/****************************
+NOTE
+*****************************/
+.note{
+width:300px;
+height:300px;
+position:relative;
+overflow-x: hidden;
+background:#fff;
+margin:5px;
+border-right:3px solid #aaa;
+border-bottom:3px solid #aaa;
+border-top:1px solid #ccc;
+border-left:1px solid #ccc;
+}
+
+.note_header{
+font-size:10px;
+background:#C8E0F9;
+border-bottom:#8BD1F8 1px solid;
+height:17px;
+}
+
+
+div.note_date{
+float:left;
+font-size:12px;
+font-weight:bold;
+width:270px;
+padding:1px 0px 1px 2px;
+color:#3883D6;
+}
+
+div.note_text{
+margin-bottom:3px;
+}
+
+div.note_delete{
+float:left;
+width:20px;
+text-align:right;
+}
+
+div.note_delete a:hover{
+background:url();
 }
 
 
 
-.top-bar{
-	height:35px;
-	background:#ccc;
-	width:100%;
-	margin:10px 0px 0px 14px;
+.note_controls {
+text-align:right;
+margin-right:0px;
 }
 
-.top-bar input{
-	font-size:18px;
-}
-
-.button{
-
-}
-
-.note_wrapper{
-background: #fff;
-text-align: left;
-}
-
-.note_listing{
-	font-size:18px;
-	margin:10px;
-	width:500px;
-	text-align:left;
-}
-
-.shadow
+.editor_field
 {
-	background-color:#ccc;
-	float:left;
-    background: url(/images/shadowAlpha.png) no-repeat bottom right !important;
-    background: url(/images/shadow.gif) no-repeat bottom right;
-    margin: 10px 0 0 10px !important;
-    margin: 10px 0 0 5px;
-  	text-align:left;
+border:0px solid #fff;
+width:280px;
+height:220px;
+overflow:auto;
+}
+
+.file_listing{
+width:100px; 
+float:left;
+margin:5px;
 }
 
 .inner_note{
-  display: block;
-  margin: -6px 6px 6px -6px;
-  padding: 5px 5px 3px 15px;
-  background: #fff;
-  text-align:left;
+margin:10px;
 }
 
-.note_description{
-	font-size:18px;
-	margin:10px;
-	padding:5px;
-    text-align:left;
+div.tags{
+color:#3883D6;
+margin: 5px 0px 5px 0px;
+padding-top:3px;
+border-top:1px dotted #ccc;
 }
 
-.note_listing a{
-	font-size:11px;
-}
-
-.tags{
-	font-size:11px;
-	color: 333;
-	background-color: #FFF;
-	padding:3px;	
-}
-
-.small{
-	font-size: 11px;
-}
-
-h3 {
-	font-size: 11px;	
-}
-
-
-
-.img{
-	border:0px solid #fff;
-}
-
-textarea{
-	background: #fff;
-	border: 1px solid #fff;
-	color: #000;
-	font:  13px 'trebuchet ms';
-	margin: 1px;
-	padding: 3px;
-	overflow:visible;
-
-}
-
-.file_block
-{
-	border-top: 1px solid #ccc;
-	margin-top:5px;
-	padding-top:10px;
-	width:440px;
-}
-
-.cloud a{
-	color:#333;
+/****************************
+FILES
+*****************************/
+.file a:hover{
+background:url();
 }
