--- a/Rails/notable/Trunk/app/views/account/login.rhtml
+++ b/Rails/notable/Trunk/app/views/account/login.rhtml
@@ -1,22 +1,13 @@
+
 <%= start_form_tag :action=> "login" %>
+	<fieldset>
+	<legend>Please Login</legend>
+	    <label for="user_login">Login:</label><br/>
+	    <input type="text" name="user_login" id="user_login" size="20" value=""/><br/>
 
-<div title="Account login" id="loginform" class="form">
-    <h3>Please login</h3>
-    
-    <% if @message %>
-      <div id="message"><%= @message %></div>
-    <% end %>
+	   	<label for="user_password">Password:</label><br/>
+	    <input type="password" name="user_password" id="user_password" size="20"/>
 
-    <label for="user_login">Login:</label><br/>
-    <input type="text" name="user_login" id="user_login" size="30" value=""/><br/>
-
-    <label for="user_password">Password:</label><br/>
-    <input type="password" name="user_password" id="user_password" size="30"/>
-
-    <br/><br/>
-    <input type="submit" name="login" value="Login &#187;" class="primary" />
-
-</div>
-
+	    <input type="submit" class="account_button" name="login" value="Login" class="primary" /><%= link_to "Sign Up", {:action=>'signup'},{:class=>'account_link'} %>
+</fieldset>
 <%= end_form_tag %>
-
