--- a/Rails/notable/Trunk/app/views/account/signup.rhtml
+++ b/Rails/notable/Trunk/app/views/account/signup.rhtml
@@ -1,15 +1,14 @@
+<% form_tag "signup", {:style=>"height:200px;"} do %>  
+  <fieldset>
+  	<legend>Signup</legend>
+	<label for="user_login">Desired login:</label><br/>
+ 	<%= text_field "user", "login", :size => 20 %>
+	<label for="user_password">Choose password:</label><br/>
+	<%= password_field "user", "password", :size => 20 %>
+  	<label for="user_password_confirmation">Confirm password:</label><br/>
+  	<%= password_field "user", "password_confirmation", :size => 20 %>
+	<input type="submit" value="Signup" class="primary" /> <%= link_to "return to login in", {:action=>"login"}, {:class=>"account_link"} %>
+	</fieldset>
+<% end %>
 
-<%= start_form_tag :action=> "signup" %>
-  <h3>Signup</h3>
-  <%= error_messages_for 'user' %><br/>
-  
-  <label for="user_login">Desired login:</label><br/>
-  <%= text_field "user", "login", :size => 30 %><br/>
-  <label for="user_password">Choose password:</label><br/>
-  <%= password_field "user", "password", :size => 30 %><br/>
-  <label for="user_password_confirmation">Confirm password:</label><br/>
-  <%= password_field "user", "password_confirmation", :size => 30 %><br/>
-
-<input type="submit" value="Signup" class="primary" />
-<%= end_form_tag %>
 
