--- a/Rails/notable/Trunk/app/views/layouts/account.rhtml
+++ b/Rails/notable/Trunk/app/views/layouts/account.rhtml
@@ -1,19 +1,30 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <title>Notable</title>
   <%= javascript_include_tag :defaults %> 
-  <%= javascript_include_tag 'notable.js'%>
+  <%= javascript_include_tag "jquery", "curvycorners", "notable" %>
   <%= stylesheet_link_tag 'notable' %>
 </head>
 <body>
+<div id="center">
+<% if error_messages_for('user') != "" %>
+	<div class="signup_message" style="">
+   	  <%= error_messages_for 'user' %>
+	</div>
+<% end %>
 
-<div class="login_header">
-	<h1 class="login_logo">
-		<div>Notable!</div>
-	</h1>				
-</div>
-<div id="container">
-<%= @content_for_layout %>
+<% if @message %>
+	<div class="login_message" style="">	
+	  <%= @message %>
+	</div>   
+<% end %>
+	<div id="account_box">
+		<h1>Notable</h1>
+		<div id="account_form">
+			<%= @content_for_layout %>
+		</div>
+	</div>
 </div>
 </body>
 </html>
