--- a/Rails/notable/Trunk/app/views/layouts/notes.rhtml
+++ b/Rails/notable/Trunk/app/views/layouts/notes.rhtml
@@ -2,25 +2,20 @@
 <head>
   <title>Notable</title>
   <%= javascript_include_tag :defaults %> 
-  <%= javascript_include_tag "jquery", "notable" %>
+  <%= javascript_include_tag "jquery", "notable", "curvycorners" %>
   <%= stylesheet_link_tag 'notable' %>
 </head>
 <body>
 
 <div class="header">
-	<h1 class="logo">
-		<div>Notable!</div>
-
-<ul class="navigation">
-<!--
-	  <li><%= link_to 'home', {:controller => 'notes', :action=>'home'}, :class=>'active' %></li>
-	  <li><%= link_to 'files', {:controller => 'notes', :action=> 'files'}, :class=>'inactive'  %></li>
-	  <li><%= link_to 'account', {:controller=> 'account', :action=>'account'}, :class=>'inactive' %></li>
--->
-	  <li><%= link_to 'logout', {:controller=> 'account', :action=>'logout'}, :class=>'link' %></li>
-  </ul>		
-	</h1>
+  <div class="navigation">
+	<%= link_to 'logout', {:controller=> 'account', :action=>'logout'}, :class=>'link' %>
+  </div>		
+  <h1 class="logo">
+	  Notable!
+  </h1>
 </div>
+<div style="clear:both"></div>
 
 <iframe id="upload_target" name="upload_target" style="width:0;height:0" frameborder="0"></iframe>
 	<div class="search">
