--- a/Rails/notable/Trunk/public/stylesheets/notable.css
+++ b/Rails/notable/Trunk/public/stylesheets/notable.css
@@ -2,10 +2,19 @@
 DEFAULTS
 *****************************/
 *{
-font-family: helvetica, sans-serif;
-font-size: 12px;
+font-family:helvetica, sans-serif;
+}
+
+html, body{
 margin:0px;
 padding:0px;
+height: 100%;
+text-align: center;
+background:#ccc;
+}
+
+ul{
+margin-left:1.5em;
 }
 
 a{
@@ -25,11 +34,6 @@ paddin:2px;
 STRUCTURE
 *****************************/
 
-body{
-background:#eee;
-
-}
-
 div#container
 {
 margin-left: 10%; 
@@ -37,41 +41,179 @@ margin-right: 10%;
 text-align:left;
 }
 
+
+
+/****************************
+ACCOUNT
+*****************************/
+
+
+#center{
+		position:absolute;
+		height:300px;
+		width:400px;
+		left: 50%;
+        top :15%;
+        margin-left: -200px;  /* half of width */
+	    xmargin-top: -150px;   /* half of height */
+}
+
+#top_quarter{
+		position:absolute;
+		height:300px;
+		width:400px;
+		left: 50%;
+        top :25%;
+        margin-left: -200px;  /* half of width */
+	    margin-top: -150px;   /* half of height */
+}
+
+#account_box{
+		position:relative;
+		margin:0 0 0 0;
+		width:400px;
+		xheight:300px;
+		background-color:#000;
+		color:#fff;
+		border:3px solid #fff;
+		text-align:center;
+}
+
+
+#account_box h1{
+	font-size:32px;
+}
+
+
+div#account_form{
+	margin:auto;
+	text-align:left;
+	xheight:125px;
+	width:225px;
+	font-family: helvetica, sans-serif;
+}
+
+
+#account_box input{
+	font-size:18px;
+	margin:2px;
+}
+
+#account_box label{
+	font-size:16px;
+	position:relative;top:3px;
+}
+
+#account_box label{
+	line-height:1.5em
+}
+
+.account_button{
+  margin:10px 0;
+}
+
+
+
+fieldset{
+  border:0px solid #fff;
+}
+
+legend{
+	color:#fff;
+}
+
+.login_message{
+background:#ffff00;
+border:3px solid #ffcc33;
+color:#000;
+width:400px;
+padding:3px;
+font-size:14px;
+text-align:center;
+margin-bottom:50px;
+}
+
+.signup_message{
+background:#ffff00;
+border:3px solid #ffcc33;
+color:#000;
+width:400px;
+padding:3px;
+font-size:14px;
+text-align:left;
+margin-bottom:50px;
+}
+
+a.account_link{
+font-size: .75em;
+line-height :1em;
+margin-left:10px;
+color:#fff;
+padding:3px;
+text-decoration:underline;
+}
+
+a.account_link:hover{
+font-size:.75em;
+line-height:1em;
+color:#000;
+background:#fff;
+padding:3px;
+text-decoration:none;
+}
+
+.fieldWithErrors input{
+	background:yellow;
+	padding:0px; margin:0px;
+}
+
+#errorExplanation{
+margin:10px;
+font-size:14px;
+}
+
+#errorExplanation h2{
+font-size:1.25em;
+margin-bottom:2px;
+}
+
+
 /****************************
 NAVIGATION
 *****************************/
-ul.navigation{
-list-style:none;
-text-align:right;
-margin-right:0px;
+div.navigation{
+float:right;
+width:5%;
+font-size:1em;
+font-weight:bold;
+padding-right:10px;
+margin-top:1.75em;
 }
 
 
-ul.navigation li{
-display:inline;
-}
-
-ul.navigation a{
+div.navigation a{
 color:#fff;
 text-decoration:none;
-position:relative;
-	}
+}
 
 /****************************
 HEADER
 *****************************/
 div.header{
+float:left;
 text-align:left;
-}
-
-h1{
+padding-left:10px;
 background:#000;
-padding:10px;
-color:#eee;
+width:100%;
 }
 
-h1 div{
-font-size:2em;
+
+h1.logo{
+margin:0px;
+color:#fff;
+font-size:1.75em;
+line-height:1.85em;
+width:75%;
 }
 
 /****************************
@@ -98,21 +240,25 @@ NOTE
 
 
 .note{
+text-align:left;
 width:325px;
-position:absolute;
 overflow-x: hidden;
-background:#fff;
-margin:5px;
+background:#ffffcc;
 border-right:3px solid #aaa;
 border-bottom:3px solid #aaa;
 border-top:1px solid #ccc;
 border-left:1px solid #ccc;
+font-size:.85em;
+}
+
+.note img.thumb{
+border:3px solid #fff;
 }
 
 .note_header{
 font-size:1px;
-background:#C8E0F9;
-border-bottom:#8BD1F8 1px solid;
+background:#ffff66;
+border-bottom:#ffff00 1px solid;
 height:17px;
 }
 
@@ -124,7 +270,7 @@ line-height:17px;
 font-weight:bold;
 width:300px;
 padding:1px 0px 1px 2px;
-color:#3883D6;
+color:#000;
 }
 
 div.note_text{
