--- a/Rails/notable/Trunk/app/views/notes/_note_listing.rhtml
+++ b/Rails/notable/Trunk/app/views/notes/_note_listing.rhtml
@@ -17,14 +17,20 @@
 		</div>
 	<div class="inner_note" id="inner_note<%=note_listing.id%>">			
 	<div id="notedescr<%= note_listing.id %>" class="note_text">
-		<%= RedCloth.new(note_listing.description).to_html %>
+		<%= 
+			if !note_listing.description.nil? && note_listing.description > ""
+				RedCloth.new(note_listing.description).to_html 	
+			else
+				"Click Here to Edit This Note"
+			end
+		%>
 	</div>
 
 	<%= in_place_editor 'notedescr' + note_listing.id.to_s, 			    	
 						:url=>{:controller=>'notes',:action=>'update_descr', :id=>note_listing},
-						:rows => 15 #, 
-						#:cols => 40 #,
-						#:load_text_url =>{:controller=>'notes',:action=>'get_descr', :id=>note_listing}
+						:rows => 15, 
+						:cols => 32,
+						:load_text_url =>{:controller=>'notes',:action=>'get_descr', :id=>note_listing}
 						%>	
 
 	<div id="files<%=note_listing.id%>" class="file_block">
