--- a/Rails/notable/Trunk/app/views/layouts/notes.rhtml
+++ b/Rails/notable/Trunk/app/views/layouts/notes.rhtml
@@ -19,14 +19,19 @@
 
 <iframe id="upload_target" name="upload_target" style="width:0;height:0" frameborder="0"></iframe>
 	<div class="search">
+		<!--
 		<div class="search_form">
 		<%= start_form_tag ({:action => 'search_by_tag'} )%>
 			<%= text_field_tag 'tag_search', "search for tags..." %> <%= submit_tag "Search", :class=>"button"%>
-			<%= link_to_remote 'Add a Note', 
-			:url=>{:controller=>'notes',:action=>'new'}		                       		     
-			%>
 		<%= end_form_tag %>
 		</div>
+		-->
+		<%= link_to_remote '<img src="/images/icons/add.png" />Add a Note', 
+		{:url=>{:controller=>'notes',:action=>'new'},
+		:complete=>"Notable.Page.load_notes()"},
+		{:id=>"add_note"}		                       		     
+		%> | 
+		<a href="/">See all notes</a>		
 		<div class="cloud" id="cloud">
 			<%=generate_tag_cloud()%>
 		</div>
