git-svn-id: file:///Users/will/rendale@40 651630e0-a32e-0410-a001-f4242d931729

--- a/Rails/notable/Trunk/app/views/account/signup.rhtml
+++ b/Rails/notable/Trunk/app/views/account/signup.rhtml
@@ -1,4 +1,4 @@
-<% form_tag "signup", {:style=>"height:200px;"} do %>  
+<% form_tag "signup" do %>  
   <fieldset>
   	<legend>Signup</legend>
 	<label for="user_login">Desired login:</label><br/>
