--- a/Rails/notable/Trunk/app/views/notes/_note_listing.rhtml
+++ b/Rails/notable/Trunk/app/views/notes/_note_listing.rhtml
@@ -1,7 +1,7 @@
-<div class="note" id="note<%=note_listing.id%>" <%=@newstyle%>>	
+<div class="note" style="display:none" id="note<%=note_listing.id%>">	
 		<div style="display:none">
 			<div class="noteId"><%=note_listing.id%></div>
-			<div class="noteX"><%=note_listing.x%></div>
+			<div class="noteX"><%=note_listing.x%></div>s
 			<div class="noteY"><%=note_listing.y%></div>
 			<div class="noteZ"><%=note_listing.z%></div>
 		</div>
@@ -30,9 +30,10 @@ id="edit_descr<%=note_listing.id.to_s%>">Edit</a>
 	<%= in_place_editor 'notedescr' + note_listing.id.to_s, 			    	
 						:url=>{:controller=>'notes',:action=>'update_descr', :id=>note_listing},
 						:rows => 10, 
-						:cols => 35,
-                                                :external_control => 
-'edit_descr'+note_listing.id.to_s,
+						:cols => 41,
+						:highlightColor => "#FFFF33",
+						:highlightEndColor => "#FFFFCC",
+                        :external_control => 'edit_descr'+note_listing.id.to_s,
 						:load_text_url =>{:controller=>'notes',:action=>'get_descr', :id=>note_listing}
 						%>	
 
