git-svn-id: file:///Users/will/rendale@45 651630e0-a32e-0410-a001-f4242d931729

--- a/Rails/notable/Trunk/app/views/layouts/account.rhtml
+++ b/Rails/notable/Trunk/app/views/layouts/account.rhtml
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <head>
-  <title>Notable</title>
+  <title>Notable!</title>
   <%= javascript_include_tag :defaults %> 
   <%= javascript_include_tag "jquery", "curvycorners", "notable" %>
   <%= stylesheet_link_tag 'notable' %>
