git-svn-id: file:///Users/will/rendale@46 651630e0-a32e-0410-a001-f4242d931729

--- a/Rails/notable/Trunk/app/views/layouts/account.rhtml
+++ b/Rails/notable/Trunk/app/views/layouts/account.rhtml
@@ -20,7 +20,7 @@
 	</div>   
 <% end %>
 	<div id="account_box">
-		<h1>Notable</h1>
+		<h1>Notable!</h1>
 		<div id="account_form">
 			<%= @content_for_layout %>
 		</div>
