git-svn-id: file:///Users/will/rendale@51 651630e0-a32e-0410-a001-f4242d931729

--- a/Rails/notable/Trunk/public/stylesheets/notable.css
+++ b/Rails/notable/Trunk/public/stylesheets/notable.css
@@ -220,6 +220,15 @@ width:75%;
 CONTROLS
 *****************************/
 
+.error_message{
+	color:#fff;
+	padding:2px;
+	margin:2px;
+	background:red;
+	text-align:center;
+	font-weight:bold;
+}
+
 div.search{
 padding: 10px 0 5px 0;
 background:#bbb;
