--- a/Rails/notable/Trunk/app/views/layouts/notes.rhtml
+++ b/Rails/notable/Trunk/app/views/layouts/notes.rhtml
@@ -4,8 +4,10 @@
 <head>
   <title>Notable</title>
   <%= javascript_include_tag :defaults %> 
-  <%= javascript_include_tag "jquery", "notable", "curvycorners" %>
+  <%= javascript_include_tag "jquery", "notable", "curvycorners", "lightbox" %>
   <%= stylesheet_link_tag 'notable' %>
+  <%= stylesheet_link_tag 'lightbox' %>
+  <%= stylesheet_link_tag 'default' %>
 </head>
 <body>
 
@@ -14,7 +16,7 @@
 	  Notable!
   </h1>
   <div class="navigation">
-	<%= link_to 'help', {:controller=> 'account', :action=>'logout'}, :class=>'link' %> |
+	<%= link_to 'help', {:controller=>'account', :action=>'help'}, {:class=>'link lbOn'} %> |
 	<%= link_to 'settings', {:controller=> 'account', :action=>'logout'}, :class=>'link' %> |
 	<%= link_to 'logout', {:controller=> 'account', :action=>'logout'}, :class=>'link' %>
   </div>		
