--- a/Rails/notable/Trunk/public/stylesheets/notable.css
+++ b/Rails/notable/Trunk/public/stylesheets/notable.css
@@ -406,3 +406,54 @@ background:none;
 color:#000;
 }
 
+
+
+/****************************
+FILES
+*****************************/
+div.help_header{
+background:#FFFF66;
+padding:5px;
+color:#000;
+}
+
+div.help_header h1{
+	color:#000;
+	font-size:1.5em;
+	margin:0px;
+	float:left;
+	width:50%;
+}
+
+div#close_help{
+	font-weight:bold;
+	font-size:.85em;
+	width:50%;
+	float:right;
+	text-align:right;
+}
+
+.help{
+padding:5px;
+font-size:.85em;
+line-height:1.5em;
+}
+
+.help h2{
+	margin:10px 0px 5px 0px;
+	padding:0px;
+	font-size:1.35em;
+	color:blue;
+}
+
+.help p{
+	padding:0px;
+	font-size:1.1em;
+	margin:5px 0 0 0;
+}
+
+.help ul{
+	margin:0 0 0 2em;
+	padding:0px;
+}
+
