--- a/Rails/notable/Trunk/app/views/layouts/notes.rhtml
+++ b/Rails/notable/Trunk/app/views/layouts/notes.rhtml
@@ -4,7 +4,7 @@
 <head>
   <title>Notable</title>
   <%= javascript_include_tag :defaults %> 
-  <%= javascript_include_tag "jquery", "notable", "curvycorners", "lightbox" %>
+  <%= javascript_include_tag "notable", "lightbox" %>
   <%= stylesheet_link_tag 'notable' %>
   <%= stylesheet_link_tag 'lightbox' %>
   <%= stylesheet_link_tag 'default' %>
@@ -25,17 +25,10 @@
 
 <iframe id="upload_target" name="upload_target" style="width:0;height:0" frameborder="0"></iframe>
 	<div class="search">
-		<!--
-		<div class="search_form">
-		<%= start_form_tag ({:action => 'search_by_tag'} )%>
-			<%= text_field_tag 'tag_search', "search for tags..." %> <%= submit_tag "Search", :class=>"button"%>
-		<%= end_form_tag %>
-		</div>
-		-->
 		<%= link_to_remote '<img src="/images/icons/add.png" 
 alt="add a note" />Add a Note', 
 		{:url=>{:controller=>'notes',:action=>'new'},
-		:complete=>"Notable.Page.add_note()"},
+		:complete=>"Notable.page.add_note()"},
 		{:id=>"add_note"}		                       		     
 		%> | 
 		<a href="/">See all notes</a>		
