git-svn-id: file:///Users/will/rendale@58 651630e0-a32e-0410-a001-f4242d931729

--- a/Rails/notable/Trunk/app/views/notes/_file_listing.rhtml
+++ b/Rails/notable/Trunk/app/views/notes/_file_listing.rhtml
@@ -1,7 +1,7 @@
 <div id="file<%= file_listing.id %>" class="file">
 
 <% if file_listing.systempath != nil && file_listing.filename != nil then %>
-  <a href="<%= url_for(:controller=>'notes', :action=>'get_file', :id => file_listing.note.id, :file_id => file_listing.id)%>" target="blank" title="<%=file_listing.filename%>">
+  <a href="<%= url_for(:controller=>'notes', :action=>'get_file', :id => file_listing.note.id, :file_id => file_listing.id)%>" title="<%=file_listing.filename%>">
 	<%
 	if file_listing.filetype=~(/image/i)
 	%>
