git-svn-id: file:///Users/will/rendale@59 651630e0-a32e-0410-a001-f4242d931729

--- a/Rails/notable/Trunk/app/views/account/help.rhtml
+++ b/Rails/notable/Trunk/app/views/account/help.rhtml
@@ -15,6 +15,7 @@
 	<li>Enter note content using the textile markup language</li>
 	<li>Attach up to 5 megabyte files to your notes</li>
 	<li>Tag your notes for easy search and retrieval</li>
+	<li>Under settings, you can assign colors to tags to differentiate between various topics </li>
 </ul>
 </p>
 </div>
