--- a/Rails/notable/Trunk/app/views/layouts/account.rhtml
+++ b/Rails/notable/Trunk/app/views/layouts/account.rhtml
@@ -20,7 +20,11 @@
 			  <%= @message %>
 			</div>   
 		<% end %>
-		<h1>Notable!</h1>
+		<h1 style="margin:10px 0 0 0;padding:0px;">Notable!</h1>
+		<div style="text-align:left; width:75%; margin:0px auto 5px auto; background:#ffff99; border:1px solid #cccc99; padding:5px; font-size:12px; line-height:18px;">
+		If you would like to try a demo of this application.  
+		Login with login: DemoUser  password:  password
+		</div>
 		<div id="account_form">
 			<%= @content_for_layout %>
 		</div>
