--- a/Rails/notable/Trunk/app/views/notes/_file_listing.rhtml
+++ b/Rails/notable/Trunk/app/views/notes/_file_listing.rhtml
@@ -6,12 +6,8 @@
 	if file_listing.filetype=~(/image/i)
 	%>
 
-	  <img class="thumb" alt="<%=file_listing.filename%>" src="<%= 
-url_for(:controller=>'notes', 
-:action=>'get_file', :id => file_listing.note.id, :file_id => 
-file_listing.id, :type=>'thumb') %>" border="0"/></a>		
-	  <%= link_to_remote '<img class="delete_btn" 
-src="/images/buttonDelete.gif" border="0" alt="delete file"/>', 
+	  <img class="thumb" alt="<%=file_listing.filename%>" src="<%= url_for(:controller=>'notes', :action=>'get_file', :id => file_listing.note.id, :file_id => file_listing.id, :type=>'thumb') %>" border="0"/></a>		
+	  <%= link_to_remote '<img class="delete_btn" src="/images/buttonDelete.gif" border="0" alt="delete file"/>', 
 						{:complete => "new Effect.Fade($('file#{file_listing.id}'))",
 						:url=>{:action => 'delete_file', :id => file_listing.note.id, :note_file_id => file_listing.id}}
 						%>
@@ -19,9 +15,7 @@ src="/images/buttonDelete.gif" border="0" alt="delete file"/>',
 	else
 	%>  
 	
-		  <img src="<%= GetFileIcon(file_listing) %>" 
-alt="<%=file_listing.filename%>" 
-border="0"/></a>	
+    <img src="<%= GetFileIcon(file_listing) %>" alt="<%=file_listing.filename%>" border="0"/></a>	
    	  <%= link_to_remote '<img src="/images/buttonDelete.gif" 
 alt="delete file" border="0" />', 
 						{:complete => "new Effect.Fade($('file#{file_listing.id}'))",
