--- a/Rails/notable/Trunk/public/stylesheets/notable.css
+++ b/Rails/notable/Trunk/public/stylesheets/notable.css
@@ -263,6 +263,22 @@ left:50px;
 z-index:9999;
 }
 
+.yellow{
+	background:#ffffcc;
+}
+
+.red{
+	background:#ffcccc;		
+}
+
+.blue{
+	background:#ccffff;	
+}
+
+.green{
+	background:#ccffcc;
+}
+
 .note a{
 	color:blue;
 }
@@ -282,6 +298,22 @@ background:#ffff66;
 border-bottom:#ffff00 1px solid;
 height:17px;
 }
+
+.red .note_header{
+	background:#ff6666;		
+	border-bottom:#ff0000 1px solid;
+}
+
+.blue .note_header{
+	background:#66ffff;	
+	border-bottom:#00ffff 1px solid;
+}
+
+.green .note_header{
+	background:#66ff66;
+	border-bottom:#00ff00 1px solid;
+}
+
 
 
 div.note_date{
@@ -305,13 +337,8 @@ font-size:1em;
 }
 
 div.note_text ul{
-	margin-left:0px;
+	padding-left:5px;
 	margin-top:.25em;
-	padding-left:.7em;
-}
-
-div.note_text ul{
-
 }
 
 div.note_delete{
@@ -336,8 +363,26 @@ margin-right:0px;
 border:0px solid #fff;
 overflow:auto;
 text-align:left;
-width:100%;
+width:97%;
 }
+
+.yellow .editor_field{
+	background:#ffffcc;
+}
+
+.red .editor_field{
+	background:#ffcccc;		
+}
+
+.blue .editor_field{
+	background:#ccffff;	
+}
+
+.green .editor_field{
+	background:#ccffcc;
+}
+
+
 
 .file_listing{
 width:100px; 
@@ -363,9 +408,6 @@ color:#525552;
 font-size:1em;
 }
 
-.editor_field{
-	background:#ffffcc;
-}
 
 /****************************
 FILES
@@ -447,3 +489,37 @@ line-height:1.5em;
 	padding:0px;
 }
 
+/************************************************
+Settings
+************************************************/
+#settings_container{
+	padding-top:20px;
+}
+
+.tag_setup{
+	margin:auto;
+	background:#ddd;
+	width:75%;
+	border:1px #fff solid;
+	padding:20px 0px 20px 20px;
+}
+
+.tag_setup table{
+	margin-left:10px;
+	width:400px;
+}
+
+.tag_setup table th{
+	text-align:left;
+	background:#aaa;
+	color:#fff;
+	padding:5px;
+	border-bottom:1px solid #fff;
+}
+
+.tag_setup table td{
+	text-align:left;
+	background:#eee;
+	padding:5px;
+	border-bottom:1px dotted #aaa;
+}
