git-svn-id: file:///Users/will/rendale@69 651630e0-a32e-0410-a001-f4242d931729

--- a/Rails/marathonr/Trunk/app/views/account/_signup.rhtml
+++ b/Rails/marathonr/Trunk/app/views/account/_signup.rhtml
@@ -1,4 +1,4 @@
-<div title="Account signup" id="signupform">
+<div title="Account signup" id="signupform" style="padding-top:20px">
 <div style="padding-left:25px">
 <%= start_form_tag :action=> "signup" %>
   <h3>Signup</h3>
