--- a/Rails/marathonr/Trunk/app/views/schedules/list.rhtml
+++ b/Rails/marathonr/Trunk/app/views/schedules/list.rhtml
@@ -1,5 +1,5 @@
-<h1>Listing schedules</h1>
 
+<h1 style="color:#ccc;margin:5px;padding-top:20px">Your Training Programs</h1>
 <table>
   <tr>
   <% for column in Schedule.content_columns %>
