--- a/Rails/marathonr/Trunk/app/views/account/login.rhtml
+++ b/Rails/marathonr/Trunk/app/views/account/login.rhtml
@@ -17,14 +17,14 @@
 				<td><input style="height:30px; font-size:24px" class="text_field" type="password" name="user_password" id="user_password" size="12"/></td>
 			</tr>
 			<tr>
-				<td colspan="2" align="right"><a href="#" onclick="Effect.toggle('signup_wrapper','slide', {duration: 1})">sign up for an account</a>&nbsp;&nbsp;&nbsp;<input class="button" type="submit" name="login" value="Login" class="primary" /></td>
+				<td colspan="2" align="right"><a href="#" onclick="Effect.toggle('signup_wrapper','slide', {duration: .25})">sign up for an account</a>&nbsp;&nbsp;&nbsp;<input class="button" type="submit" name="login" value="Login" class="primary" /></td>
 			</tr>
 		</table>
 		
 <%= end_form_tag %>
 </div>
 	</div>
-	<div id="signup_wrapper" style="width:400px; display:none;" >
+	<div id="signup_wrapper" style="width:500px; display:none;" >
 		<%=render_partial "signup" %>
 	</div>
 	<div></div>
