--- a/Rails/marathonr/Trunk/public/stylesheets/marathonr.css
+++ b/Rails/marathonr/Trunk/public/stylesheets/marathonr.css
@@ -1,7 +1,8 @@
-html,body,div,span,td,tr,th
+html,body,div,span,td,tr,th, a
 {
 	font-family:arial;
 	font-size:12px;
+	color:#fff;
 }
 
 body{
@@ -23,6 +24,13 @@ div#page{
 .text_field{
 	background: url(/images/text_field_bg.jpg) #fff repeat-x;
 	border:1px solid #fff;
+	font-size:1em;
+}
+
+input[type=test]{
+	background: url(/images/text_field_bg.jpg) #fff repeat-x;
+	border:1px solid #fff;
+	font-size:1em;	
 }
 
 .button{
@@ -138,10 +146,11 @@ h1 span#highlight{
 	font-size:24px;
 }
 
-div#settings_navigation{
+div#navigation{
 	width:40%
 	float:right;	
 	text-align:right;
+	color:#ccc;
 }
 
 
@@ -149,6 +158,7 @@ table.log_table th{
 	background:#cc0000;
 	color:#fff;
 	padding:5px;
+	font-size:1.5em;
 }
 
 table.log_table {
@@ -173,10 +183,14 @@ width:100%;
 
 table.log_table th{
 	padding:5px;
+	border-bottom:#ff0000 1px solid;
 }
 
 table.calendar{
-	margin:25px;
+	margin:auto;
+	border-bottom: 1px dotted #554C4C;
+	margin-bottom:10px;
+	padding:5px;
 }
 
 .day{
@@ -210,6 +224,7 @@ div#week_navigation{
 	background:#353131;
 	padding:5px;
 	border-bottom:1px solid #554C4C;
+	color:#ccc;
 }
 
 div#week_navigation a{
@@ -224,7 +239,7 @@ margin-top:30px;
 div#form{
 	float:left;
 	margin-left:auto;
-	width:75%;
+	width:80%;
 }
 
 div#form div
@@ -240,7 +255,7 @@ div#weeks_wrapper{
 	background:#eee;
 	background:#353131;
 	padding:5px;
-	border-bottom:1px solid #554C4C;
+	border:1px solid #554C4C;
 	margin:auto;
 	width:225px;
 }
@@ -254,8 +269,10 @@ div#weeks_wrapper a{
 	color: #ccc;
 }
 
-table.calendar{
-	padding:0px;
-	margin:0px;
-	padding-bottom:10px;
+.calendar_inner{
+}
+
+.label{
+	color:#ccc;
+	font-weight:bold;
 }
