--- a/Rails/SimplePhotoGallery/Trunk/app/views/albums/show.rhtml
+++ b/Rails/SimplePhotoGallery/Trunk/app/views/albums/show.rhtml
@@ -1,3 +1,9 @@
+<h1><%=h @album.title%></h1>
+<ul>
+<% @photos.each do | photo | %>
+	<li><%= link_to image_tag(photo.public_filename(:thumb)), photo.public_filename%></li>
+<% end %>
+</ul>
 
 <%= link_to 'Edit', edit_album_path(@album) %> |
-<%= link_to 'Back', albums_path %>
+<%= link_to 'Back', albums_path %>	
