--- a/Rails/SimplePhotoGallery/Trunk/app/views/photos/new.rhtml
+++ b/Rails/SimplePhotoGallery/Trunk/app/views/photos/new.rhtml
@@ -4,10 +4,10 @@
 
 <%= error_messages_for :mugshot %>
 
-<% form_for(:photo, :url => mugshots_path, 
+<% form_for(:photo, :url => photos_path, 
                       :html => { :multipart => true }) do |f| -%>
   <p>
-    <label for="mugshot">Upload A Mugshot:</label>
+    <label for="photo">Upload A Photo:</label>
     <%= f.file_field :uploaded_data %>
   </p>
   <p>
