--- a/Rails/SimplePhotoGallery/Trunk/app/views/photos/show.rhtml
+++ b/Rails/SimplePhotoGallery/Trunk/app/views/photos/show.rhtml
@@ -1,3 +1,2 @@
 
-<%= link_to 'Edit', edit_photo_path(@photo) %> |
-<%= link_to 'Back', photos_path %>
+<%= link_to image_tag(@photo.public_filename(:thumb)), @photo.public_filename %>
