--- a/Rails/SimplePhotoGallery/Trunk/app/views/users/new.rhtml
+++ b/Rails/SimplePhotoGallery/Trunk/app/views/users/new.rhtml
@@ -1,16 +1,20 @@
+<div id="content" style="text-align:left">
+<div style="text-align:left;width:300px;margin:auto;padding:10px; background:#ccc; border:#eee solid 2px">
 <%= error_messages_for :user %>
 <% form_for :user, :url => users_path do |f| -%>
-<p><label for="login">Login</label><br/>
+<p><label for="login">Login:</label><br/>
 <%= f.text_field :login %></p>
 
-<p><label for="email">Email</label><br/>
+<p><label for="email">Email:</label><br/>
 <%= f.text_field :email %></p>
 
-<p><label for="password">Password</label><br/>
+<p><label for="password">Password:</label><br/>
 <%= f.password_field :password %></p>
 
-<p><label for="password_confirmation">Confirm Password</label><br/>
+<p><label for="password_confirmation">Confirm Password:</label><br/>
 <%= f.password_field :password_confirmation %></p>
 
 <p><%= submit_tag 'Sign up' %></p>
 <% end -%>
+</div>
+</div>
